--- a/Başlangıç_Seviye_Frontend_Patikası/CSS/Introduction/style.css
+++ b/Başlangıç_Seviye_Frontend_Patikası/CSS/Introduction/style.css
@@ -26,3 +26,14 @@ Comment
 .fs-large {
     font-size: 30px;
 }
+
+
+/* selectors */
+
+ul>li:first-child {
+    color: aqua;
+}
+
+li:last-child {
+    color: blue;
+}
