--- a/Başlangıç_Seviye_Frontend_Patikası/Bootstrap/Homework1/style.css
+++ b/Başlangıç_Seviye_Frontend_Patikası/Bootstrap/Homework1/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .brand-name {
-    color: green;
+    color: white;
     font-weight: bold;
     font-family: "Times New Roman", Times, serif;
 }
